init: 初始化项目框架

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,5 +137,6 @@
   ],
   "vetur.format.scriptInitialIndent": true,
   "vetur.format.styleInitialIndent": true,
-  "vetur.validation.script": false
+  "vetur.validation.script": false,
+  "liveServer.settings.port": 5501
 }
