--- a/IQAS_Admin/package.json
+++ b/IQAS_Admin/package.json
@@ -64,6 +64,7 @@
     "tinymce": "^5.10.3",
     "vditor": "^3.8.13",
     "vue": "^3.2.33",
+    "vue-dataac": "^2.0.9",
     "vue-i18n": "^9.1.9",
     "vue-json-pretty": "^2.0.6",
     "vue-router": "^4.0.14",
